prevent footer overlap with content

--- a/src/main/resources/META-INF/resources/css/openagrar.css
+++ b/src/main/resources/META-INF/resources/css/openagrar.css
@@ -28,9 +28,6 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 220px; /* Margin bottom by footer height */
-}
 html body #page {
   background-color: #F9F9F9;
 }
@@ -276,20 +273,7 @@ html body #powered_by {
   border-top: 0;
   padding: 5px 0;
 }
-.flatmir-footer {
-  color: #ebeded;
-  border: none;
-  margin-top: 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 205px; /* Set the fixed height of the footer here */
-}
-.flatmir-footer .container {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  adding: 1em;
-}
+
 #sponsored_by {
   background-color: #F9F9F9;
   margin-top: 25px;
